--- a/location.html
+++ b/location.html
@@ -2,7 +2,7 @@
 <html>  
 <head>  
     <meta charset="utf-8">  
-    <title>地理位置测试</title>  
+    <title>百度地理位置测试</title>  
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>  
     <script type="text/javascript" src="http://developer.baidu.com/map/jsdemo/demo/convertor.js"></script>  
     <script type="text/javascript">  
